2009-06-04  Mark Probst  <mark.probst@gmail.com>

	* mini-gc.c: Disable the code because it makes SGen crash.

2009-06-03  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (mono_compile_assembly): Handle file open errors gracefully
	instead of asserting.

2009-05-31  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (mono_compile_assembly): Move the creation of the
	output file after the code has been compiled.

2009-05-30  Zoltan Varga  <vargaz@gmail.com>

	* tramp-ppc.c (mono_arch_get_static_rgctx_trampoline): Fix 64 bit support.

2009-05-31  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c aot-runtime.c: Get rid of the shared/non-shared got
	entries distinction to simplify the code.

	* mini.h: Bump AOT file format version.
	
2009-05-28  Zoltan Varga  <vargaz@gmail.com>

	* objects.cs: Fix the signature of one of the tests.

	* mini.c (mini_create_ftnptr): New helper function, moved here from
	object.c.
	(mini_get_addr_from_ftnptr): Ditto.
	(mini_init): Install the new helpers.

2009-05-28  Martin Baulig  <martin@ximian.com>

	Correctly initialize the debugger when embedding Mono.

	* mdb-debug-info32.s, mdb-debug-info64.s: Add a global variable
	`MONO_DEBUGGER__using_debugger' to the `.mdb_debug_info' section;
	see documentation in mini_debug_running_inside_mdb().

	* debug-debugger.c
	(mini_debug_running_inside_mdb): New function to check whether
	we're running inside mdb.

	* mini.c (mini_init): Call mini_debugger_init() if we're running
	inside the debugger.

	* driver.c (mono_main): Moved the call to mini_debugger_init()
	into mini_init() to make this work when embedding Mono.

	* debug-debugger.c (mini_debugger_init): Warn about duplicate
	calls to mini_debugger_init().

	* mini.h: Rename mono_debugger_init() -> mini_debugger_init(),
	mono_debugger_main() -> mini_debugger_main() and put them inside a
	`MONO_DEBUGGER_SUPPORTED' conditional.

2009-05-26 Rodrigo Kumpera  <rkumpera@novell.com>
