@@ -4468,9 +4468,16 @@ static SgenThreadInfo* thread_table [THREAD_HASH_SIZE];
 
 #if USE_SIGNAL_BASED_START_STOP_WORLD
 
+#ifndef __APPLE__
 static sem_t suspend_ack_semaphore;
+#endif
+static sem_t *suspend_ack_semaphore_ptr;
 static unsigned int global_stop_count = 0;
+#ifdef __APPLE__
+static int suspend_signal_num = SIGXFSZ;
+#else
 static int suspend_signal_num = SIGPWR;
+#endif
 static int restart_signal_num = SIGXCPU;
 static sigset_t suspend_signal_mask;
 static mword cur_thread_regs [ARCH_NUM_REGS] = {0};
@@ -4540,7 +4547,7 @@ thread_handshake (int signum)
 	}
 
 	for (i = 0; i < count; ++i) {
-		while ((result = sem_wait (&suspend_ack_semaphore)) != 0) {
+		while ((result = sem_wait (suspend_ack_semaphore_ptr)) != 0) {
 			if (errno != EINTR) {
 				g_error ("sem_wait ()");
 			}
@@ -4582,7 +4589,7 @@ suspend_handler (int sig, siginfo_t *siginfo, void *context)
 		gc_callbacks.thread_suspend_func (info->runtime_data, context);
 
 	/* notify the waiting thread */
-	sem_post (&suspend_ack_semaphore);
+	sem_post (suspend_ack_semaphore_ptr);
 	info->stop_count = stop_count;
 
 	/* wait until we receive the restart signal */
@@ -4592,7 +4599,7 @@ suspend_handler (int sig, siginfo_t *siginfo, void *context)
 	} while (info->signal != restart_signal_num);
 
 	/* notify the waiting thread */
-	sem_post (&suspend_ack_semaphore);
+	sem_post (suspend_ack_semaphore_ptr);
 	
 	errno = old_errno;
 }
@@ -5083,7 +5090,12 @@ typedef struct {
 	void *(*start_routine) (void *);
 	void *arg;
 	int flags;
+#ifdef __APPLE__
+	pthread_mutex_t registered_mutex;
+	pthread_cond_t registered;
+#else
 	sem_t registered;
+#endif
 } SgenThreadStartInfo;
 
 static void*
@@ -5094,11 +5106,19 @@ gc_start_thread (void *arg)
 	void *t_arg = start_info->arg;
 	void *(*start_func) (void*) = start_info->start_routine;
 	void *result;
+	int post_result;
 
 	LOCK_GC;
 	info = gc_register_current_thread (&result);
 	UNLOCK_GC;
-	sem_post (&(start_info->registered));
+#ifdef __APPLE__
+	pthread_mutex_lock (&start_info->registered_mutex);
+	post_result = pthread_cond_signal (&start_info->registered);
+	pthread_mutex_unlock (&start_info->registered_mutex);
+#else
+	post_result = sem_post (&(start_info->registered));
+#endif
+	g_assert (!post_result);
 	result = start_func (t_arg);
 	/*
 	 * this is done by the pthread key dtor
@@ -5119,17 +5139,35 @@ mono_gc_pthread_create (pthread_t *new_thread, const pthread_attr_t *attr, void 
 	start_info = malloc (sizeof (SgenThreadStartInfo));
 	if (!start_info)
 		return ENOMEM;
-	sem_init (&(start_info->registered), 0, 0);
+#ifdef __APPLE__
+	pthread_mutex_init (&start_info->registered_mutex, NULL);
+	pthread_mutex_lock (&start_info->registered_mutex);
+	pthread_cond_init (&start_info->registered, NULL);
+#else
+	result = sem_init (&(start_info->registered), 0, 0);
+	g_assert (!result);
+#endif
 	start_info->arg = arg;
 	start_info->start_routine = start_routine;
 
 	result = pthread_create (new_thread, attr, gc_start_thread, start_info);
 	if (result == 0) {
+#ifdef __APPLE__
+		result = pthread_cond_wait (&start_info->registered, &start_info->registered_mutex);
+		g_assert (!result);
+#else
 		while (sem_wait (&(start_info->registered)) != 0) {
 			/*if (EINTR != errno) ABORT("sem_wait failed"); */
 		}
+#endif
 	}
+#ifdef __APPLE__
+	pthread_mutex_unlock (&start_info->registered_mutex);
+	pthread_mutex_destroy (&start_info->registered_mutex);
+	pthread_cond_destroy (&start_info->registered);
+#else
 	sem_destroy (&(start_info->registered));
+#endif
 	free (start_info);
 	return result;
 }
@@ -5951,7 +5989,19 @@ mono_gc_base_init (void)
 		g_strfreev (opts);
 	}
 
+#ifdef __APPLE__
+	{
+		char *name = g_strdup_printf ("/mono/%d/suspacksem", getpid ());
+		suspend_ack_semaphore_ptr = sem_open (name, O_CREAT | O_EXCL, S_IRWXU, 0);
+		if (suspend_ack_semaphore_ptr == SEM_FAILED)
+			g_error ("sem_open");
+		sem_unlink (name);
+		g_free (name);
+	}
+#else
+	suspend_ack_semaphore_ptr = &suspend_ack_semaphore;
 	sem_init (&suspend_ack_semaphore, 0, 0);
+#endif
 
 	sigfillset (&sinfo.sa_mask);
 	sinfo.sa_flags = SA_RESTART | SA_SIGINFO;
